<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.digavo.japanese.ActivityVocabularyTest">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="-1dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="8dp"
            android:text="@string/vocabularyTest"
            android:textAlignment="center"
            android:textColor="?attr/colorAccent"
            android:textSize="18sp" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="0.03"
            android:background="?attr/colorAccent" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:padding="8dp"
            android:text="@string/testScore"
            android:textAlignment="viewStart"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:padding="8dp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.23"
            android:ems="10"
            android:hint="@string/testType"
            android:inputType="text"
            android:padding="8dp"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btAccept"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/testAccept"
            android:textColor="?attr/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="0.03"
            android:background="?attr/colorAccent" />

        <TextView
            android:id="@+id/tvPrev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:padding="8dp"
            android:text="@string/testPrevious"
            android:textSize="18sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
